--- a/static/style.css
+++ b/static/style.css
@@ -32,3 +32,35 @@
     width: auto;
     object-fit: contain;
 }
+
+/* Login text boxes */
+.form-control {
+    background: #fff !important;
+    border: 1.5px solid #C1C8CD !important;
+    color: #222 !important;
+    transition: border-color 0.2s, box-shadow 0.2s;
+}
+.form-control:focus {
+    background: #f5fff5 !important;
+    border-color: #17c964 !important;
+    box-shadow: 0 0 2px #cff9de !important;
+}
+
+/*Dashboard fixes*/
+.dashboard-tile {
+    background: #fff;
+    border: 2px solid #B0B1B5;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    height: 148px;
+    width: 198px;
+    box-shadow: none;
+    transition: box-shadow 0.18s;
+}
+.dashboard-tile:hover {
+    box-shadow: 0 2px 14px rgba(0,0,0,0.09);
+    border-color: #9ED3B1;
+}
