--- a/templates/login.html
+++ b/templates/login.html
@@ -12,9 +12,10 @@
 
     <!-- Logo -->
     <div class="mb-4">
-        <img src="{{ url_for('static', filename='llm.png') }}" alt="Logo" style="height: 110px; display: block; margin: 0 auto; margin-top: 0px;">
+      <img src="{{ url_for('static', filename='llm.png') }}" alt="Logo" style="height: 110px; display: block; margin: 0 auto; margin-top: 0px;">
+      <div class="light-hr" style="width: 90vw; margin: 30px 0 5px 0;"></div>
         <!-- Light green underline, full width -->
-        <div style="height: 2px; width: 90vw; background: #dadddf; margin: 30px 0 5px 0; position: relative; left: 50%; right: 50%; transform: translateX(-50%); border: none;"></div>
+        <div style="height: 2px; width: 90vw; background: #e9ecef; margin: 30px 0 5px 0; position: relative; left: 50%; right: 50%; transform: translateX(-50%); border: none;"></div>
     </div>
 
     <!-- Title -->
@@ -23,10 +24,10 @@
     </h1>
 
     <!-- Card -->
-    <div style="border-radius: 18px; border: 2.5px solid #ccd0d2;  margin-top: 15px; margin-bottom: 15px; padding: 10px 130px 25px 130px; background: #eef0f0;">
+    <div style="margin-top: 15px; margin-bottom: 15px; padding: 10px 130px 25px 130px;">
 
         <div class="card shadow p-4"
-            style="width: 360px; border-radius: 14px; border: 2px solid #C1C8CD; margin-top: 10px;">
+        style="width: 360px; border-radius: 14px; border: 2px solid #e2e6ea; margin-top: 10px;">
 
             <h5 class="mb-3 text-center" style="font-size: 1.45rem; font-weight: 600; letter-spacing: -0.5px;">
                 Log in
