remove the line from the login

--- a/static/style.css
+++ b/static/style.css
@@ -112,6 +112,7 @@
 .module-icon {
     height: 75px !important; /* Slightly larger icons */
     margin-bottom: 0.5rem;
+    border-width: 3px;
 }
 
 .module-name {
