--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,7 +35,7 @@
 <!-- Page Content -->
 <div class="container py-5">
     <!-- Title with new color -->
-    <h2 class="text-center dark-blue-text" style="font-size:2.3rem; font-weight:700; margin-top: 25px; margin-bottom:35px; letter-spacing: -0.5px;">
+    <h2 class="text-center dark-blue-text" style="font-size:2.3rem; border=2px; font-weight:700; margin-top: 25px; margin-bottom:35px; letter-spacing: -0.5px;">
         Pretrained, Domain-Tuned AI Agents for the Public Sector
     </h2>
     
@@ -49,13 +49,14 @@
         padding: 25px 50px;
         margin: 0 auto;
         width: 920px;
-        display: block;"
+        display: block;
+	border-width:4px;"
     >
     <div class="row row-cols-1 row-cols-md-3 g-0" style="margin:0;">
         {% for dept in departments %}
-            <div class="col d-flex justify-content-center" style="padding: 10px 4px;">
+            <div class="col d-flex justify-content-center" style="padding: 10px 4px; border-width:3px;">
                 <a href="{{ url_for('modules', dept=dept.key) }}" style="text-decoration:none;">
-                    <div class="card dashboard-tile d-flex align-items-center justify-content-center">
+                  <div class="card dashboard-tile d-flex align-items-center justify-content-center" style="width: 210px; height: 150px; border: 5px solid #B0B1B5; border-radius:20px; box-shadow: none; margin: 0;">
                         {% if dept.icon == 'edd.jpeg' or dept.icon == 'ranchocordova.jpeg' %}
                             <img src="{{ url_for('static', filename='icons/' + dept.icon) }}"
                                 alt="{{ dept.name }}"
